working on the side bar

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,18 @@
   }
 }
 
+/* Setting dark background color for the whole window */
+body {
+  background-color: #121316;
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+
 /* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
